# mg_feec_transforming

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_configs.py  mag_jump_residual_decay.txt  mag_jump_residual_decay_results.csv  plot_mg.py  runme.py
cluster_logs/run_20260607_113846/: build.err  build.out  build.sh  dirac2d_2d_L_barycentric_v.sh  dirac2d_2d_L_barycentric_w.sh  dirac2d_2d_L_rowsum_v.sh  dirac2d_2d_L_rowsum_w.sh  dirac2d_2d_L_scaledid_v.sh  dirac2d_2d_L_scaledid_w.out  dirac2d_2d_L_scaledid_w.sh  dirac2d_2d_square_hole_barycentric_v.out  dirac2d_2d_square_hole_barycentric_v.sh  dirac2d_2d_square_hole_barycentric_w.sh  dirac2d_2d_square_hole_rowsum_v.sh  dirac2d_2d_square_hole_rowsum_w.out  dirac2d_2d_square_hole_rowsum_w.sh  dirac2d_2d_square_hole_scaledid_v.sh  dirac2d_2d_square_hole_scaledid_w.out  dirac2d_2d_square_hole_scaledid_w.sh  dirac2d_2d_two_holes_barycentric_v.sh  dirac2d_2d_two_holes_barycentric_w.out  dirac2d_2d_two_holes_barycentric_w.sh  dirac2d_2d_two_holes_rowsum_v.sh  dirac2d_2d_two_holes_rowsum_w.out  dirac2d_2d_two_holes_rowsum_w.sh  dirac2d_2d_two_holes_scaledid_v.sh  dirac2d_2d_two_holes_scaledid_w.out  dirac2d_2d_two_holes_scaledid_w.sh  dirac3d_3d_corner_barycentric_v.sh  dirac3d_3d_corner_barycentric_w.out  dirac3d_3d_corner_barycentric_w.sh  dirac3d_3d_corner_rowsum_v.out  dirac3d_3d_corner_rowsum_v.sh  dirac3d_3d_corner_rowsum_w.sh  dirac3d_3d_corner_scaledid_v.sh  dirac3d_3d_corner_scaledid_w.sh  dirac3d_3d_hole_void_barycentric_v.out  dirac3d_3d_hole_void_barycentric_v.sh  dirac3d_3d_hole_void_barycentric_w.out  dirac3d_3d_hole_void_barycentric_w.sh  (+113 more)
cluster_logs/run_20260607_115935/: build.out  build.sh  dirac2d_2d_L_barycentric_v.out  dirac2d_2d_L_barycentric_v.sh  dirac2d_2d_L_barycentric_w.sh  dirac2d_2d_L_rowsum_v.out  dirac2d_2d_L_rowsum_v.sh  dirac2d_2d_L_rowsum_w.out  dirac2d_2d_L_rowsum_w.sh  dirac2d_2d_L_scaledid_v.sh  dirac2d_2d_L_scaledid_w.sh  dirac2d_2d_square_hole_barycentric_v.sh  dirac2d_2d_square_hole_barycentric_w.out  dirac2d_2d_square_hole_barycentric_w.sh  dirac2d_2d_square_hole_rowsum_v.out  dirac2d_2d_square_hole_rowsum_v.sh  dirac2d_2d_square_hole_rowsum_w.sh  dirac2d_2d_square_hole_scaledid_v.out  dirac2d_2d_square_hole_scaledid_v.sh  dirac2d_2d_square_hole_scaledid_w.sh  dirac2d_2d_two_holes_barycentric_v.sh  dirac2d_2d_two_holes_barycentric_w.sh  dirac2d_2d_two_holes_rowsum_v.out  dirac2d_2d_two_holes_rowsum_v.sh  dirac2d_2d_two_holes_rowsum_w.sh  dirac2d_2d_two_holes_scaledid_v.out  dirac2d_2d_two_holes_scaledid_v.sh  dirac2d_2d_two_holes_scaledid_w.sh  dirac3d_3d_corner_barycentric_v.out  dirac3d_3d_corner_barycentric_v.sh  dirac3d_3d_corner_barycentric_w.sh  dirac3d_3d_corner_rowsum_v.sh  dirac3d_3d_corner_rowsum_w.out  dirac3d_3d_corner_rowsum_w.sh  dirac3d_3d_corner_scaledid_v.out  dirac3d_3d_corner_scaledid_v.sh  dirac3d_3d_corner_scaledid_w.out  dirac3d_3d_corner_scaledid_w.sh  dirac3d_3d_hole_void_barycentric_v.sh  dirac3d_3d_hole_void_barycentric_w.sh  (+94 more)
cluster_logs/run_20260607_121211/: build.out  build.sh  dirac2d_2d_L_barycentric_v.sh  dirac2d_2d_L_barycentric_w.out  dirac2d_2d_L_barycentric_w.sh  dirac2d_2d_L_rowsum_v.sh  dirac2d_2d_L_rowsum_w.sh  dirac2d_2d_L_scaledid_v.out  dirac2d_2d_L_scaledid_v.sh  dirac2d_2d_L_scaledid_w.sh  dirac2d_2d_two_holes_barycentric_v.out  dirac2d_2d_two_holes_barycentric_v.sh  dirac2d_2d_two_holes_barycentric_w.sh  dirac2d_2d_two_holes_rowsum_v.sh  dirac2d_2d_two_holes_rowsum_w.sh  dirac2d_2d_two_holes_scaledid_v.sh  dirac2d_2d_two_holes_scaledid_w.sh  dirac3d_3d_hole_void_barycentric_v.sh  dirac3d_3d_hole_void_barycentric_w.sh  dirac3d_3d_hole_void_rowsum_v.sh  dirac3d_3d_hole_void_rowsum_w.out  dirac3d_3d_hole_void_rowsum_w.sh  dirac3d_3d_hole_void_scaledid_v.out  (+51 more)
configs/: dirac2d_2d_L_barycentric_v.json  dirac2d_2d_L_barycentric_w.json  dirac2d_2d_L_rowsum_v.json  dirac2d_2d_L_rowsum_w.json  dirac2d_2d_L_scaledid_v.json  dirac2d_2d_L_scaledid_w.json  dirac2d_2d_circle_barycentric_v.json  dirac2d_2d_circle_barycentric_w.json  dirac2d_2d_circle_rowsum_v.json  dirac2d_2d_circle_rowsum_w.json  dirac2d_2d_circle_scaledid_v.json  dirac2d_2d_circle_scaledid_w.json  dirac2d_2d_reentrant_barycentric_v.json  dirac2d_2d_reentrant_barycentric_w.json  dirac2d_2d_reentrant_rowsum_v.json  dirac2d_2d_reentrant_rowsum_w.json  dirac2d_2d_reentrant_scaledid_v.json  dirac2d_2d_reentrant_scaledid_w.json  dirac2d_2d_square_centered_barycentric_v.json  dirac2d_2d_square_centered_barycentric_w.json  dirac2d_2d_square_centered_rowsum_v.json  dirac2d_2d_square_centered_rowsum_w.json  dirac2d_2d_square_centered_scaledid_v.json  dirac2d_2d_square_centered_scaledid_w.json  dirac2d_2d_square_hole_barycentric_v.json  dirac2d_2d_square_hole_barycentric_w.json  dirac2d_2d_square_hole_rowsum_v.json  dirac2d_2d_square_hole_rowsum_w.json  dirac2d_2d_square_hole_scaledid_v.json  dirac2d_2d_square_hole_scaledid_w.json  dirac2d_2d_tria_barycentric_v.json  dirac2d_2d_tria_barycentric_w.json  dirac2d_2d_tria_rowsum_v.json  dirac2d_2d_tria_rowsum_w.json  dirac2d_2d_tria_scaledid_v.json  dirac2d_2d_tria_scaledid_w.json  dirac2d_2d_two_holes_barycentric_v.json  dirac2d_2d_two_holes_barycentric_w.json  dirac2d_2d_two_holes_rowsum_v.json  dirac2d_2d_two_holes_rowsum_w.json  (+218 more)
inc/: CMakeLists.txt  SpectraErrorOp.hpp  block_upper_triangular_preconditioner.hpp  dirac_2d.hpp  dirac_3d.hpp  geom_helpers.hpp  hcurl_laplacian.hpp  incidence.hpp  magnetostatics.hpp  mesh.hpp  mg.ipp  mg.tpp  operator.ipp  operator.tpp  qrsolve.hpp  transfer.hpp
src/: CMakeLists.txt  SpectraErrorOp.cpp  block_upper_triangular_preconditioner.cpp  dirac_2d.cpp  dirac_3d.cpp  hcurl_laplacian.cpp  incidence.cpp  magnetostatics.cpp  mesh.cpp  transfer.cpp
targets/: CMakeLists.txt  cvg.cpp  jmp.cpp
tests/: CMakeLists.txt  SpectraOpTest.cpp  cube.msh  test_dirac_2d.cpp  test_dirac_2d_cvg.cpp  test_dirac_3d.cpp  test_dirac_3d_cvg.cpp  test_dirac_mg.cpp  test_incidence.cpp  test_laplace.cpp  test_laplace_3d_cvg.cpp  test_magnetostatics.cpp  test_magnetostatics_3d_cvg.cpp  test_mg.cpp  test_op.cpp
(+550 files in other folders)
